<resources>
    <string name="app_name">BFC Fashion</string>
    <string name="forgot_password_text">Please, enter your email address. You will receive a link to create a new password via email.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_15"><strike>$15</strike></string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="jphn_doe">Jphn Doe</string>
    <string name="xyz_gmail_com">xyz@gmail.com</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="or_sign_up_with_social_account">Or sign up with social account</string>
    <string name="login">Login</string>
    <string name="or_login_with_social_account">Or login with social account</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="color">Color:</string>
    <string name="black">Black</string>
    <string name="size">Size:</string>
    <string name="_51">51$</string>
    <string name="_1">1</string>
    <string name="pullover">Pullover</string>
    <string name="l">L</string>
    <string name="leave_feedback">Leave Feedback</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="full_name">Full Name</string>
    <string name="checkout">Checkout</string>
    <string name="city">City</string>
    <string name="state_province_region">State/Province/Region</string>
    <string name="zip_code_postal_code">Zip Code (Postal Code)</string>
    <string name="country">Country</string>
    <string name="save_address">SAVE ADDRESS</string>
    <string name="search">Search</string>
    <string name="shipping_address">Shipping address</string>
    <string name="change">Change</string>
    <string name="payment">Payment</string>
    <string name="delivery_method">Delivery method</string>
    <string name="order">Order:</string>
    <string name="delivery">Delivery:</string>
    <string name="summary">Summary:</string>
    <string name="price_range">Price range</string>
    <string name="colors">Colors</string>
    <string name="sizes">Sizes</string>
    <string name="category">Category</string>
    <string name="brand">Brand</string>
    <string name="discard">Discard</string>
    <string name="apply">Apply</string>
    <string name="forgot_password">Forgot password</string>
    <string name="email">Email</string>
    <string name="send">SEND</string>
    <string name="home">Home</string>
    <string name="bag">Bag</string>
    <string name="shop">Shop</string>
    <string name="profile">Profile</string>
    <string name="short_dress">Short dress</string>
    <string name="h_amp_m"><![CDATA[H&M]]></string>
    <string name="short_black_dress">Short black dress</string>
    <string name="support">Support</string>
    <string name="you_can_also_like_this">You can also like this</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="settings">Settings</string>
    <string name="personal_information">Personal Information</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="edit">Edit</string>
    <string name="success">Success!</string>
    <string name="your_order_will_be_delivered_soon">Your order will be delivered soon</string>
    <string name="thank_you_for_choosing_our_app">Thank you for choosing our app!</string>
    <string name="continue_shopping">CONTINUE SHOPPING</string>
    <string name="my_bag">My Bag</string>
    <string name="enter_your_promo_code">Enter your promo code</string>
    <string name="check_out">CHECK OUT</string>
    <string name="favorites">Favorites</string>
    <string name="filters">Filters</string>
    <string name="trending">Trending</string>
    <string name="view_all">View all</string>
    <string name="alltime_trending">Alltime Trending</string>
    <string name="all_popular_brands">All Popular brands</string>
    <string name="brands">Brands</string>
    <string name="deals">Deals</string>
    <string name="all_under_budget">All Under Budget</string>
    <string name="New">New</string>
    <string name="you_ve_never_seen_it_before">You’ve never seen it before!</string>
    <string name="men_s">Men’s</string>
    <string name="collection_of_men_s_fashion">Collection of Men’s Fashion</string>
    <string name="women_s">Women’s</string>
    <string name="collection_of_woen_s_fashion">Collection of Woen’s Fashion</string>
    <string name="kid_s">Kid’s</string>
    <string name="collection_of_kid_s_fashion">Collection of Kid’s Fashion</string>
    <string name="my_orders">My Orders</string>
    <string name="delivered">Delivered</string>
    <string name="cancelled">Cancelled</string>
    <string name="processing">Processing</string>
    <string name="order_details">Order Details</string>
    <string name="tracking_number">Tracking number:</string>
    <string name="delivered">Delivered</string>
    <string name="order_information">Order information</string>
    <string name="payment_method">Payment method:</string>
    <string name="discount">Discount:</string>
    <string name="total_amount">Total Amount:</string>
    <string name="reorder">Reorder</string>
    <string name="my_profile">My profile</string>
    <string name="shipping_addresses">Shipping addresses</string>
    <string name="manage_shipping_addresses">Manage Shipping addresses</string>
    <string name="you_have_special_promocodes">You have special promocodes</string>
    <string name="settings">Settings</string>
    <string name="notifications_password">Notifications, password</string>
    <string name="completed_pending_cencelled_orders">Completed, Pending, Cencelled orders</string>
    <string name="women_s_tops">Women’s tops</string>
    <string name="filters">Filters</string>
    <string name="price_lowest_to_high">Price: lowest to high</string>
    <string name="categories">Categories</string>
    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="kids">Kids</string>
    <string name="select_color">Select color</string>
    <string name="shipping_info">Shipping info</string>
    <string name="select">SELECT</string>
    <string name="select_size">Select size</string>
    <string name="popular">Popular</string>
    <string name="newest">Newest</string>
    <string name="price_lowest_to_high">Price: lowest to high</string>
    <string name="customer_review">Customer review</string>
    <string name="price_highest_to_low">Price: highest to low</string>
    <string name="password_change">Password Change</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="save_password">SAVE PASSWORD</string>
    <string name="enter_your_promo_code">Enter your promo code</string>
    <string name="your_promo_codes">Your Promo Codes</string>
    <string name="off">OFF</string>
    <string name="personal_offer">Personal offer</string>
    <string name="shipping_info">Shipping info</string>
    <string name="formal_shirts">Formal Shirts</string>
    <string name="details">Details</string>
    <string name="total_amount">Total Amount:</string>
    <string name="quantity">Quantity:</string>
    <string name="tracking_number">Tracking number:</string>
    <string name="evening_dress">Evening Dress</string>
    <string name="color">Color:</string>
    <string name="size">Size:</string>
    <string name="units">Units:</string>

    <array name="initial_slider_values">
        <item>20.0</item>
        <item>70.0</item>
    </array>
</resources>