<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".module.activity.SuccessActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_170sdp"
            android:layout_height="@dimen/_170sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_130sdp"
            android:src="@drawable/bags" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:fontFamily="@font/metropolis_bold"
            android:text="@string/success"
            android:textColor="@color/black"
            android:textSize="@dimen/_26sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/metropolis_regular"
            android:text="@string/your_order_will_be_delivered_soon"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/metropolis_regular"
            android:text="@string/thank_you_for_choosing_our_app"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp" />
    </LinearLayout>


    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:background="@drawable/button_bg"
        android:elevation="@dimen/_5sdp"
        android:fontFamily="@font/metropoli_medium"
        android:gravity="center"
        android:text="@string/continue_shopping"
        android:textColor="@color/white"
        android:textSize="@dimen/_11sdp"/>
</LinearLayout>